
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4.2 (Development, See CVS) ----

2003-05-28, Rob Hillis
  Fix minor syntax error
    - zentrack/includes/templates/binForm.php 1.5
  Correct ticket sort order when searching for tickets.
    - zentrack/includes/zenTrack.class 1.10
  Show correct details in notification email when a ticket is assigned
    - zentrack/includes/zenTrack.class 1.109

2003-05-27, Rob Hillis
  Fixed potential security hole
    - zentrack/includes/session_start.php 1.12

2003-05-25, Rob Hillis
  Removed apparent accidental commit to zenTrack.class
  and commit diffed language files.
    - zentrack/includes/zenTrack.class 1.108
    - zentrack/includes/translations/english.trans 1.4
    - zentrack/includes/translations/french.trans 1.4
    - zentrack/includes/translations/german.trans 1.4
    - zentrack/includes/translations/portuguese.trans 1.2
    - zentrack/includes/translations/spanish.trans 1.4
    - zentrack/includes/translations/swedish.trans 1.3

2003-05-23, William L. Terry
  Updated priority sort for project tasks
    - zentrack/includes/zenTrack.class 1.107
 
2003-05-22, Rob Hillis
  Added Portuguese translation
    - zentrack/includes/translations/portuguese.trans 1.1
  Various translation fixes.
    - zentrack/includes/leftBins.php 1.8
    - zentrack/includes/templates/accessForm.php 1.6
    - zentrack/includes/templates/adminMenu.php 1.4
    - zentrack/includes/templates/binForm.php 1.4
    - zentrack/includes/templates/homebinForm.php 1.10
    - zentrack/includes/templates/listTickets.php 1.17
    - zentrack/includes/templates/listTickets_workFormat.php 1.15
    - zentrack/includes/templates/loginForm 1.9
    - zentrack/includes/templates/newProjectForm.php 1.21